--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="main.scss">
 </head>
 <body>
-    <div id="header"><p>Website</p></div>
+    <div id="header">
+        <p>Website</p>
+    </div>
+    <div>text</div>
 </body>
 </html>
