--- a/Website/_homePage.html
+++ b/Website/_homePage.html
@@ -7,6 +7,7 @@
     <title>BA Homepage</title>
 </head>
 <body>
+    <div id="body">
         <header>
             <div class="logo"></div>
             <div class="marginspace"></div>
@@ -19,9 +20,7 @@
             <div id="black"></div>
             <div class="marginspace"></div>
         </header>
-        <div id="content">
-            //this changes from page to page
-        </div>
+        <div id="content"></div>
         <footer>
             <div class="marginspace"></div>
             <div id="contact"></div>
@@ -29,5 +28,6 @@
             <div id="urmom"></div>
             <div class="marginspace"></div>
         </footer>
+    </div>
 </body>
 </html>
