--- a/Website/homePage.html
+++ b/Website/homePage.html
@@ -10,10 +10,21 @@
 
 <body>
     <div class="wrapper">
-        <div class="box header">header</div>
-        <div class="box content">huh?</div>
-        <div class="box footer">footer</div>
-    </div>
+        <div class="box header">
+            <div class="logo">BA</div>
+            <div id="emptyspace1"></div>
+            <div class="headertext white">white</div>
+            <div class="headertext red">red</div>
+            <div class="headertext yellow">yellow</div>
+            <div class="headertext green">green</div>
+            <div class="headertext blue">blue</div>
+            <div class="headertext purple">purple</div>
+            <div class="headertext black">black</div>
+            <div id="emptyspace2"></div>
+        </div>
+        <div class="box content">B</div>
+        <div class="box footer">C</div>
+      </div>
 </body>
 
 </html>
