--- a/Website/homePage.html
+++ b/Website/homePage.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>BA Homepage</title>
 </head>
-
 <body>
-    <div class="wrapper">
-        <div class="box header">
-            <div class="text logo">BA</div>
-            <div class="text white" onclick="white()">white</div>
-            <div class="text red" onclick="red()">red</div>
-            <div class="text yellow" onclick="yellow()">yellow</div>
-            <div class="text green" onclick="green()">green</div>
-            <div class="text blue" onclick="blue()">blue</div>
-            <div class="text purple" onclick="purple()">purple</div>
-            <div class="text black" onclick="black()">black</div>
+    <div id="wrapper">
+        <div class="header">
+            <div id="logo">BA</div>
+            <div id="white">white</div>
+            <div id="red">red</div>
+            <div id="yellow">yellow</div>
+            <div id="green">green</div>
+            <div id="blue">blue</div>
+            <div id="purple">purple</div>
+            <div id="black">black</div>
         </div>
-        <div class="box content">
-            <div class="color">HOMEPAGE</div>
-            <div class="contenttext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur necessitatibus laborum corporis omnis quaerat eos dolor est esse non sequi voluptatibus error tempora voluptate nam laboriosam provident quas, ex delectus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, ut! Illo vel amet tempora reprehenderit cumque corrupti ab voluptates cum, porro quaerat in! Ex cum in iusto, itaque aperiam odio.</div>
-            <div class="gradient"></div>
+        <div class="content">
+            <div class="a">1</div>
+            <div class="b">2</div>
+            <div class="c">3</div>
         </div>
-        <div class="box footer">
-            <div class="text logo">BA</div>
-            <div class="text contact">Contact</div>
-            <div class="text aboutus">About us</div>
-            <div class="text urmom">Ur mom</div>
+        <div class="footer">
+            <div id="logo">BA</div>
+            <div id="contact">contact</div>
+            <div id="aboutus">about us</div>
+            <div id="urmom">ur mom</div>
         </div>
-      </div>
+    </div>
 </body>
-
-<script>
-    function white() {
-        document.getElementsByClassName("white").innerHTML = "white is a color. no, it's every color. ok.";
-    }
-</script>
-
 </html>
