--- a/Website/homePage.html
+++ b/Website/homePage.html
@@ -19,9 +19,9 @@
             <div id="black">black</div>
         </div>
         <div class="content">
-            <div class="a">1</div>
-            <div class="b">2</div>
-            <div class="c">3</div>
+            <div class="a">a</div>
+            <div class="b">b</div>
+            <div class="c">c</div>
         </div>
         <div class="footer">
             <div id="logo">BA</div>
