--- a/Website/homePage.html
+++ b/Website/homePage.html
@@ -44,7 +44,7 @@
         document.getElementById("bigtext").innerHTML =
             "BITCH ASS";
         document.getElementById("text").innerHTML =
-            "Welcome to the only webstite in the world that will tell you the stunning truth about the world. Bitch Ass's mission is to enlighten the population (that's you!) about the splendor that is colors. Despite the government's attempts at silencing us, we stand strong. Read about any color you want in our amalgamation of beauty. ";
+            "Welcome to the only webstite on the internet that will tell you the stunning truth about the world. Bitch Ass's mission is to enlighten the population (that's you!) about the splendor that is colors. Despite the government's attempts at silencing us, we stand strong. Read about any color you want in our amalgamation of beauty. ";
     }
 
     function white() {
