--- a/Website/homePage.html
+++ b/Website/homePage.html
@@ -17,7 +17,7 @@
             <button onclick="yellow()" id="yellow">YELLOW</button>
             <button onclick="green()" id="green">GREEN</button>
             <button onclick="blue()" id="blue">BLUE</button>
-            <button onclick="purple()" id="purple">PURPLE</button>
+            <button onclick="purple()" id="purple">PRUPLE</button>
             <button onclick="black()" id="black">BLACK</button>
         </div>
         <div class="content">
