--- a/Bootstrap/main.html
+++ b/Bootstrap/main.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.scss">
+    <link rel="stylesheet" href="C:\Users\Elev\Documents\GitHub\WEBBUTVECKLING\bootstrap-4.5.3-dist\css\bootstrap.css">
     <title>BS (Short for BootStrap)</title>
 </head>
 <body>
-    
+    <div class="card">assman</div>
 </body>
 </html>
