--- a/Bootstrap/main.html
+++ b/Bootstrap/main.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <div class="card">assman</div>
+    <div class="bg-info">KYSS</div>
+    <div class="border">Squarespace! Todays sponsor. With Squarespace you can create the most website-like websites.</div>
 </body>
 </html>
