--- a/Bootstrap/main.html
+++ b/Bootstrap/main.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\Elev\Documents\GitHub\WEBBUTVECKLING\bootstrap-4.5.3-dist\css\bootstrap.css">
     <title>BS (Short for BootStrap)</title>
 </head>
+
 <body>
-    <div class="card">assman</div>
-    <div class="bg-info">KYSS</div>
-    <div class="border">Squarespace! Todays sponsor. With Squarespace you can create the most website-like websites.</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-8" style="background-color: hotpink;">a</div>
+            <div class="col-sm-8" style="background-color: yellow;">b</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4" style="background-color: yellow;">b</div>
+            <div class="col-sm-4" style="background-color: hotpink;">b</div>
+            <div class="col-sm-4" style="background-color: yellow;">b</div></div>
+        <div class="row">
+            <div class="col-sm" style="background-color: hotpink;">b</div>
+            <div class="col-sm" style="background-color: yellow;">b</div>
+            <div class="col-sm" style="background-color: hotpink;">b</div>
+            <div class="col-sm" style="background-color: yellow;">b</div></div>
+    </div>
 </body>
+
 </html>
