--- a/Bootstrap/main.html
+++ b/Bootstrap/main.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Elev\Documents\GitHub\WEBBUTVECKLING\bootstrap-4.5.3-dist\css\bootstrap.css">
-    <title>BS (Short for BootStrap)</title>
+    <link rel="stylesheet" href="bootstrap.css">
+    <title>Document</title>
 </head>
-
 <body>
+    
 </body>
-
 </html>
