--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,6 +16,23 @@
 
 
   <style>
+    /* Remove the navbar's default rounded borders and increase the bottom margin */
+    .navbar {
+      margin-bottom: 50px;
+      border-radius: 0;
+    }
+
+    /* Remove the jumbotron's default bottom margin */
+    .jumbotron {
+      margin-bottom: 0;
+    }
+
+    /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+
     .bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
@@ -67,7 +84,7 @@
           <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
@@ -88,136 +105,104 @@
 
   <main role="main" class="container">
 
-    <div class="starter-template">
-      <div class="container">
-
-        <h1>Bootstrap grid examples</h1>
-        <p class="lead">Basic grid layouts to get you familiar with building within the Bootstrap grid system.</p>
-        <p>In these examples the <code>.themed-grid-col</code> class is added to the columns to add some theming. This
-          is not a class that is available in Bootstrap by default.</p>
-
-        <h2 class="mt-4">Five grid tiers</h2>
-        <p>There are five tiers to the Bootstrap grid system, one for each range of devices we support. Each tier starts
-          at a minimum viewport size and automatically applies to the larger devices unless overridden.</p>
-
-        <div class="row mb-3">
-          <div class="col-4 themed-grid-col">.col-4</div>
-          <div class="col-4 themed-grid-col">.col-4</div>
-          <div class="col-4 themed-grid-col">.col-4</div>
-        </div>
-
-        <div class="row mb-3">
-          <div class="col-sm-4 themed-grid-col">.col-sm-4</div>
-          <div class="col-sm-4 themed-grid-col">.col-sm-4</div>
-          <div class="col-sm-4 themed-grid-col">.col-sm-4</div>
-        </div>
-
-        <div class="row mb-3">
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-        </div>
-
-        <div class="row mb-3">
-          <div class="col-lg-4 themed-grid-col">.col-lg-4</div>
-          <div class="col-lg-4 themed-grid-col">.col-lg-4</div>
-          <div class="col-lg-4 themed-grid-col">.col-lg-4</div>
-        </div>
-
-        <div class="row mb-3">
-          <div class="col-xl-4 themed-grid-col">.col-xl-4</div>
-          <div class="col-xl-4 themed-grid-col">.col-xl-4</div>
-          <div class="col-xl-4 themed-grid-col">.col-xl-4</div>
-        </div>
-
-        <h2 class="mt-4">Three equal columns</h2>
-        <p>Get three equal-width columns <strong>starting at desktops and scaling to large desktops</strong>. On mobile
-          devices, tablets and below, the columns will automatically stack.</p>
-        <div class="row mb-3">
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-        </div>
-
-        <h2 class="mt-4">Three unequal columns</h2>
-        <p>Get three columns <strong>starting at desktops and scaling to large desktops</strong> of various widths.
-          Remember, grid columns should add up to twelve for a single horizontal block. More than that, and columns
-          start stacking no matter the viewport.</p>
-        <div class="row mb-3">
-          <div class="col-md-3 themed-grid-col">.col-md-3</div>
-          <div class="col-md-6 themed-grid-col">.col-md-6</div>
-          <div class="col-md-3 themed-grid-col">.col-md-3</div>
-        </div>
-
-        <h2 class="mt-4">Two columns</h2>
-        <p>Get two columns <strong>starting at desktops and scaling to large desktops</strong>.</p>
-        <div class="row mb-3">
-          <div class="col-md-8 themed-grid-col">.col-md-8</div>
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-        </div>
-
-        <h2 class="mt-4">Full width, single column</h2>
-        <p class="text-warning">
-          No grid classes are necessary for full-width elements.
-        </p>
-
-        <hr class="my-4">
-
-        <h2 class="mt-4">Two columns with two nested columns</h2>
-        <p>Per the documentation, nesting is easy—just put a row of columns within an existing column. This gives you
-          two columns <strong>starting at desktops and scaling to large desktops</strong>, with another two (equal
-          widths) within the larger column.</p>
-        <p>At mobile device sizes, tablets and down, these columns and their nested columns will stack.</p>
-        <div class="row mb-3">
-          <div class="col-md-8 themed-grid-col">
-            <div class="pb-3">
-              .col-md-8
-            </div>
-            <div class="row">
-              <div class="col-md-6 themed-grid-col">.col-md-6</div>
-              <div class="col-md-6 themed-grid-col">.col-md-6</div>
-            </div>
-          </div>
-          <div class="col-md-4 themed-grid-col">.col-md-4</div>
-        </div>
-
-        <hr class="my-4">
-
-        <h2 class="mt-4">Mixed: mobile and desktop</h2>
-        <p>The Bootstrap v4 grid system has five tiers of classes: xs (extra small), sm (small), md (medium), lg
-          (large), and xl (extra large). You can use nearly any combination of these classes to create more dynamic and
-          flexible layouts.</p>
-        <p>Each tier of classes scales up, meaning if you plan on setting the same widths for xs and sm, you only need
-          to specify xs.</p>
-        <div class="row mb-3">
-          <div class="col-12 col-md-8 themed-grid-col"><img src="mikrovågor.jpg" alt=""></div>
-          <div class="col-6 col-md-4 themed-grid-col">.col-6 .col-md-4</div>
-        </div>
-        <div class="row mb-3">
-          <div class="col-6 col-md-4 themed-grid-col">.col-6 .col-md-4</div>
-          <div class="col-6 col-md-4 themed-grid-col">.col-6 .col-md-4</div>
-          <div class="col-6 col-md-4 themed-grid-col">.col-6 .col-md-4</div>
-        </div>
-        <div class="row mb-3">
-          <div class="col-6 themed-grid-col">.col-6</div>
-          <div class="col-6 themed-grid-col">.col-6</div>
-        </div>
-
-        <hr class="my-4">
-
-        <h2 class="mt-4">Mixed: mobile, tablet, and desktop</h2>
-        <div class="row mb-3">
-          <div class="col-12 col-sm-6 col-lg-8 themed-grid-col">.col-12 .col-sm-6 .col-lg-8</div>
-          <div class="col-6 col-lg-4 themed-grid-col">.col-6 .col-lg-4</div>
-        </div>
-        <div class="row mb-3">
-          <div class="col-6 col-sm-4 themed-grid-col">.col-6 .col-sm-4</div>
-          <div class="col-6 col-sm-4 themed-grid-col">.col-6 .col-sm-4</div>
-          <div class="col-6 col-sm-4 themed-grid-col">.col-6 .col-sm-4</div>
-        </div>
-
-      </div> <!-- /container -->
+    <div class="jumbotron">
+      <div class="container text-center">
+        <h1>Bootatrap</h1>
+        <p>Copy, Paste & Done</p>
+      </div>
     </div>
+
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="mikrovagor.jpg"></a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Deals</a></li>
+            <li><a href="#">Stores</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">Mikrovågor</div>
+            <div class="panel-body"><img src="mikrovagor.jpg" class="img-responsive"
+                style="width:100%" alt="Image"></div>
+            <div class="panel-footer">Buy a uh Swedish Micråvåg!</div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-danger">
+            <div class="panel-heading">BLACK FRIDAY DEAL</div>
+            <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive"
+                style="width:100%" alt="Image"></div>
+            <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-success">
+            <div class="panel-heading">BLACK FRIDAY DEAL</div>
+            <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive"
+                style="width:100%" alt="Image"></div>
+            <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          </div>
+        </div>
+      </div>
+    </div><br>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">BLACK FRIDAY DEAL</div>
+            <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive"
+                style="width:100%" alt="Image"></div>
+            <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">BLACK FRIDAY DEAL</div>
+            <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive"
+                style="width:100%" alt="Image"></div>
+            <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">BLACK FRIDAY DEAL</div>
+            <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive"
+                style="width:100%" alt="Image"></div>
+            <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          </div>
+        </div>
+      </div>
+    </div><br><br>
+
+    <footer class="container-fluid text-center">
+      <p>Online Store Copyright</p>
+      <form class="form-inline">Get deals:
+        <input type="email" class="form-control" size="50" placeholder="Email Address">
+        <button type="button" class="btn btn-danger">Sign Up</button>
+      </form>
+    </footer>
 
   </main><!-- /.container -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
