--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -101,8 +101,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#microwaves">click me to go to the thing that goes to mikrowaves</a>
-            <a class="dropdown-item" href="microwave.html">click this to go to mikrowaves</a>
+            <a class="dropdown-item" href="microwave.html">Go to: Microwaves</a>
           </div>
         </li>
       </ul>
@@ -117,7 +116,7 @@
 
     <div class="jumbotron">
       <div class="container text-center">
-        <h1>Bootatrap</h1>
+        <h1>Bootstrap</h1>
         <p>Copy, Paste & Done</p>
       </div>
     </div>
@@ -152,10 +151,10 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="panel panel-primary">
-            <div class="panel-heading">Mikrovågor</div>
+            <div class="panel-heading"><a href="microwave.html">Mikrovåg</a></div>
             <div class="panel-body"><img src="mikrovagor.jpg" class="img-responsive" style="width:100%" alt="Image">
             </div>
-            <div class="panel-footer">Buy a uh Swedish Micråvåg!</div>
+            <div class="panel-footer"><a href="microwave.html">Buy a mikrovåg</a></div>
           </div>
         </div>
         <div class="col-sm-4">
