--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -102,6 +102,7 @@
             aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="microwave.html">Go to: Microwaves</a>
+            <a href="contact.html">Go to: Contact</a>
           </div>
         </li>
       </ul>
