--- a/Bootstrap/microwave.html
+++ b/Bootstrap/microwave.html
@@ -52,8 +52,7 @@
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#microwaves">click me to go to the thing that goes to mikrowaves</a>
-            <a class="dropdown-item" href="microwave.html">click this to go to mikrowaves</a>
+            <a class="dropdown-item" href="microwave.html">Go to: Microwaves</a>
           </div>
         </li>
       </ul>
