--- a/Bootstrap/contact.html
+++ b/Bootstrap/contact.html
@@ -23,60 +23,24 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col">1</div>
-    <div class="col">
-      <div id="demo" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-          <li data-target="#demo" data-slide-to="0" class="active"></li>
-          <li data-target="#demo" data-slide-to="1"></li>
-          <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
-
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="fish.png" alt="Los Angeles" class="img-thumbnail">
-          </div>
-          <div class="carousel-item">
-            <img src="mikrovagor.jpg" alt="Chicago" class="img-thumbnail">
-          </div>
-          <div class="carousel-item">
-            <img src="clouds.jpg" alt="New York" class="img-thumbnail">
-          </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-
-      </div>
-    </div>
-    <div class="col">
-      <form action="/action_page.php">
-        <div class="form-group">
-          <label for="email">Email address:</label>
-          <input type="email" class="form-control" placeholder="Enter email" id="email">
-        </div>
-        <div class="form-group">
-          <label for="pwd">Password:</label>
-          <input type="password" class="form-control" placeholder="Enter password" id="pwd">
-        </div>
-        <div class="form-group form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox"> Remember me
-          </label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </div>
+  <!-- Grey with black text -->
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+  </ul>
+</nav>
+<div class="bg"><img src="forest.jpg"></div>
 </body>
 
 </html>
